# CalculateFileHash

./: .gitignore  CMakeLists.txt  CMakeSettings.json  CalculateFileHash.sln  README.md
CalculateFileHash/: AsyncHashStreamWriter.cpp  AsyncHashStreamWriter.h  BlockStreamReader.cpp  BlockStreamReader.h  CalculateFileHash.cpp  CalculateFileHash.vcxproj  CalculateFileHash.vcxproj.filters  CommandLineParser.cpp  CommandLineParser.h  HashGeneratorBoostImpl.cpp  HashGeneratorBoostImpl.h  IHashGenerator.h  SimpleThreadPool.cpp  SimpleThreadPool.h  main.cpp  packages.config
Project/: CMakeLists.txt  main.cpp
Project/ThreadPool/: SimpleThreadPool.cpp
Project/Writer/: AsyncHashStreamWriter.cpp
